# SecurityWorker

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
example/: loader.js  sw.js
example/basic/: index.html  loader.js
example/webpack/: package-lock.json  package.json  webpack.config.js
example/webpack/src/: index.html  loader.js  sw.js
src/: CMakeLists.txt  console.cpp  console.hpp  core.cpp  error.cpp  error.hpp  helper.cpp  helper.hpp  loader.c  map.hpp  marco.hpp  request.cpp  request.hpp  self.cpp  self.hpp  string.hpp  timer.cpp  timer.hpp  websocket.cpp  websocket.hpp
