cmake_minimum_required(VERSION 3.9)
project(jprotector)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_MACOSX_RPATH 1)
set(FEATURE_PROFILE ${PROJECT_SOURCE_DIR}/.feature.profile)
set(JERRY_LIBM OFF)
set(JERRY_CMDLINE OFF)
set(FEATURE_ERROR_MESSAGES ON)
set(MEM_HEAP_SIZE_KB 32768)
set(FEATURE_LINE_INFO ON)

include_directories(${PROJECT_SOURCE_DIR}/3rdparty/jerry/jerry-core/include)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/jerry/jerry-ext/include)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/jerry/jerry-port/default/include)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/b64.c)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/aes)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/gzip)

add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/gzip)
add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/aes)
add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/b64.c)
add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/jerry)
add_subdirectory(${PROJECT_SOURCE_DIR}/src)